[package]
name = "kla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.14", features = ["derive", "cargo"] }
config = "0.13.2"
http = "0.2.8"
reqwest = {version = "0.11.12", features = ["blocking", "stream"]}
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"]}
toml = "0.5.9"
url = "2.3.1"
tera = { version = "1", default-features = false }
serde_json = "1.0.88"
git-version = "0.3.5"
regex = "1.8.3"
